# agentgov

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
agentgov/: __init__.py  _keywords.py  benchmark.py  cli.py  code_import.py  config.py  db_store.py  detectors.py  embed.py  governance.py  ingest.py  knowledge.py  loader.py  report.py  scoring.py  trace_import.py
agentgov/corpus/: __init__.py  controls.yaml  eu_ai_act.yaml  inspect.yaml  nist.yaml  risk_patterns.yaml
benchmark/: cases.yaml
demo/: agent.yaml  agent_graph.py  agent_safe.yaml  governance.yaml  trace_langsmith.json
examples/: real-world-runs.md
tests/: test_benchmark.py  test_code_import.py  test_detectors.py  test_governance.py  test_knowledge.py  test_scoring.py  test_trace_import.py
