[project]
name = "agentgov"
version = "0.1.0"
description = "Static governance auditor for the agent orchestration layer — maps deep-agent design risks to NIST AI RMF, the EU AI Act, and Inspect."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Himanshu Pandey" }]
keywords = ["ai-governance", "ai-safety", "nist-ai-rmf", "eu-ai-act", "agents", "langgraph"]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# Next-iteration database backend (Postgres + pgvector + Neo4j). Not needed for
# the default offline YAML mode.
db = ["psycopg[binary]>=3.1", "neo4j>=5.0", "pgvector>=0.2", "sentence-transformers>=2.2"]

[project.scripts]
agentgov = "agentgov.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentgov"]

[dependency-groups]
dev = ["pytest>=8.0"]
